Bug 96546 - OpenGL black-listing failing in some cases ...
Summary: OpenGL black-listing failing in some cases ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.0.beta1
Hardware: x86-64 (AMD64) Windows (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.2
Keywords:
: 97458 97475 97493 97644 97733 97849 97864 98524 (view as bug list)
Depends on: 117477
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-12-16 16:56 UTC by Buovjaga
Modified: 2018-05-08 15:00 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace of crash on Windows, 5.1 RC1 (15.14 KB, text/plain)
2015-12-16 16:56 UTC, Buovjaga
Details
Apitrace of the crash (1.22 MB, application/octet-stream)
2015-12-17 11:52 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2015-12-16 16:56:49 UTC
Created attachment 121351 [details]
Backtrace of crash on Windows, 5.1 RC1

Opened start center, tried to launch an application - crash.
Already observed with 5.1 beta2.
It didn't crash before I upgraded my graphics drivers.

Version: 5.1.0.1 (x64)
Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 4; Ver: Windows 6.1; Render: GL;
Locale: fi-FI (fi_FI)

Renderer: Intel(R) HD Graphics 3000
Vendor: Intel
Memory: 2108 MB
Version: 3.1.0 - Build 9.17.10.4229
Shading language version: 1.40 - Intel Build 9.17.10.4229
Comment 1 Commit Notification 2015-12-16 17:57:33 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70bfd5d747ad24fcd70eab93fb5e27faafdd35fe

tdf#96546 - Bitmap getTexture calls can crash too - enter GL zone earlier.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2015-12-17 09:18:58 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a46bd51fe94c19ab29cfd27ab75c80ac89a5737&h=libreoffice-5-1

tdf#96546 - Bitmap getTexture calls can crash too - enter GL zone earlier.

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Meeks 2015-12-17 09:39:25 UTC
We should now crash just once =)

Trying to get my hands on an Intel HD 3000 through various devious means ;-)
Comment 4 Buovjaga 2015-12-17 11:52:56 UTC
Created attachment 121362 [details]
Apitrace of the crash

Installed http://apitrace.github.io/

Ran it with:
apitrace trace --api gl "C:\Program Files\LibreOffice 5.1 RC1\program\soffice.exe"

It saved the soffice.trace inside the \program folder.
Comment 5 Michael Meeks 2015-12-18 11:48:49 UTC
I now have:

Version: 5.1.0.1
Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 4; Ver: Windows 6.1; Render: GL; 
Locale: en-GB (en_GB)

Renderer: Intel(R) HD Graphics 3000
Vendor: Intel
Memory: 2108 MB
Version: 3.1.0 - Build 9.17.10.4229
Shading language version: 1.40 - Intel Build 9.17.10.4229

Running Windows 7 with the latest intel driver; and it singularly fails to crash on start ! how annoying =)

There must be something different about your machine and/or setup - any thoughts ?
Comment 6 Buovjaga 2015-12-18 13:29:01 UTC
kompi: you have intel HD 4000. Could you test, if 5.1 RC1 crashes for you on startup of any LibO application, when you have OpenGL enabled?
Comment 7 Roman Kuznetsov 2015-12-21 13:05:28 UTC
(In reply to Beluga from comment #6)
> kompi: you have intel HD 4000. Could you test, if 5.1 RC1 crashes for you on
> startup of any LibO application, when you have OpenGL enabled?

Версия: 5.1.0.1.0+
ID сборки: 756e103214c3c74c2af7e0da836b568259f81226
CPU Threads: 4; OS Version: Windows 6.1; UI Render: GL; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-1, Time: 2015-12-19_00:30:14
Локаль: ru-RU (ru_RU)

not crash

Версия: 5.1.0.1
ID сборки: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 4; Ver: Windows 6.1; Render: GL; 

Локаль: ru-RU (ru_RU)

not crash

both on Intel HD4000
Comment 8 Roman Kuznetsov 2016-02-05 18:45:39 UTC
Version: 5.1.0.3 (x64)
ID build: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 4; OS Version: Windows 6.1; UI Render: GL; 
Locale: ru-RU (ru_RU)

Renderer: Intel(R) HD Graphics 3000
Vendor: Intel
Memory: 1812 MB
Version: 3.1.0 - Build 9.17.10.4229
Shading language version: 1.40 - Intel Build 9.17.10.4229

don't crash on start any module! verified fixed
Comment 9 Buovjaga 2016-02-11 09:54:31 UTC
Reopening per discussion on IRC, as I still get the crash, still get OGL enabled with a fresh profile, still do not get it disabled after crash.

DriverVersion: 9.17.10.4229
DriverDate: 5-26-2015
DeviceID: PCI\VEN_8086&DEV_0126&SUBSYS_21CF17AA&REV_09
AdapterVendorID: 0x8086
AdapterDeviceID: 0x0126
AdapterSubsysID: 0x21cf17aa
DeviceKey: System\CurrentControlSet\Control\Video\{77965AB7-7613-4889-95CB-44BFD5910D98}\0000
DeviceString: Intel(R) HD Graphics 3000
Comment 10 Michael Meeks 2016-02-11 17:54:37 UTC
*** Bug 97475 has been marked as a duplicate of this bug. ***
Comment 11 Michael Meeks 2016-02-11 17:55:21 UTC
Lets turn this into the generic black-listing failure bug that it seems to be =)
Comment 12 Michael Meeks 2016-02-11 17:56:50 UTC
*** Bug 97458 has been marked as a duplicate of this bug. ***
Comment 13 Michael Meeks 2016-02-11 17:57:58 UTC
*** Bug 97493 has been marked as a duplicate of this bug. ***
Comment 14 V Stuart Foote 2016-02-15 15:56:50 UTC
*** Bug 97849 has been marked as a duplicate of this bug. ***
Comment 15 V Stuart Foote 2016-02-15 15:59:06 UTC
*** Bug 97644 has been marked as a duplicate of this bug. ***
Comment 16 V Stuart Foote 2016-02-15 16:07:59 UTC
QA note: per Michael Meeks use this as a generic OpenGL black-list failure tracker--dupe issues to here.

So for folks arriving here with OpenGL issues -- NOTE --

OpenGL can be disabled without deletion of user profile or attempting to reinstall LibreOffice (which simply reuses existing user profile).

Stanza to do so is exposed per user in their registrymodifications.xcu

<item oor:path="/org.openoffice.Office.Common/VCL"><prop oor:name="UseOpenGL" oor:op="fuse"><value>[false|true]</value></prop></item>

Set "true" is enabled and is the default unless the GPU/driver combination is block listed.  Set "false" to disable OpenGL support -- should be the setting when detection of GPU/driver is considered insufficient to correctly function on LibreOffice.

Also, either attach your opengl_device.log or summarize details of OS, LibreOFfice build, GPU and driver to a post.
Comment 17 Michael Meeks 2016-02-15 17:01:53 UTC
fixed by:

commit 461f0e70ac73639f8e0b9d9ce3fcfe657aa6f1e9
Author: Tor Lillqvist <tml@collabora.com>
Date:   Fri Feb 12 16:36:55 2016 +0200

    We need to mention the vcl_opengl_blacklist here
    
    Otherwise the file won't be included in the installer.

Will back-port to -5-1-1 =) please re-test this with a dev build of 5-1 to ensure that it is truly working for you !

Until we get a unit test for the underlying packaging problem - manual verification here is much appreciated ! =)
Comment 18 V Stuart Foote 2016-02-15 23:22:07 UTC
(In reply to V Stuart Foote from comment #15)
> *** Bug 97644 has been marked as a duplicate of this bug. ***

the opengl_device.log for this issue

Listed drivers for nVidia GTX 650
DriverVersion: 9.18.13.3165
DriverDate: 10-23-2013

should have failed black listing  http://opengrok.libreoffice.org/xref/core/vcl/opengl/opengl_blacklist_windows.xml and been blocked, but was not
Comment 19 Michael Meeks 2016-02-17 11:00:05 UTC
*** Bug 97864 has been marked as a duplicate of this bug. ***
Comment 20 Buovjaga 2016-02-25 14:49:05 UTC
*** Bug 97733 has been marked as a duplicate of this bug. ***
Comment 21 Buovjaga 2016-03-10 19:16:51 UTC
*** Bug 98524 has been marked as a duplicate of this bug. ***