tdf#96546 - Bitmap getTexture calls can crash too - enter GL zone earlier.

Change-Id: Idd095e0a3b5e5226eaf1db90bfb0a838bc51de19
Reviewed-on: https://gerrit.libreoffice.org/20750
Reviewed-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Tor Lillqvist <tml@collabora.com>